<resources>
    <string name="app_name">Vinyl Companion</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="anadir_coleccion">Añadir a la colección</string>
    <string name="mas_info">Más información</string>
    <string name="escaner">Escáner</string>
    <string name="coleccion">Colección</string>
    <string name="mercado">Marketplace</string>
    <string name="ajustes">Ajustes</string>
    <string name="logout">Cerrar sesión</string>
    <string name="no_tienes_cuenta_registrate_aqu">¿No tienes cuenta? Registrate aquí</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="t_tulo_del_album">Título del álbum</string>
    <string name="artista_o_grupo">Artista o grupo</string>
    <string name="pais_del_album">País del album</string>
    <string name="ano_de_salida">Año de salida</string>
    <string name="precio">Precio</string>
    <string name="publicar">Publicar</string>
    <string name="usuario">Usuario</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="codigo_de_barras">Código de barras</string>
    <string name="scan">Escanear</string>
    <string name="nombre_del_album">Nombre del album</string>
    <string name="ano_de_lanzamiento">Año de lanzamiento</string>
    <string name="buscar">Buscar</string>
    <string name="realmente_borrar">¿Realmente desea borrar este album de su colección?</string>
    <string name="borrar_album">Borrar Album</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="album_eliminado">Album Eliminado</string>
    <string name="deshacer">Deshacer</string>
    <string name="lenguaje">Idioma</string>
    <string name="o_separador">ó</string>
    <string name="escaner_bar">Escáner</string>
    <string name="album_bar">Álbum</string>
    <string name="marketplace_bar">Marketplace</string>
    <string name="info_del_producto">Información del producto</string>
    <string name="coleccion_bar">Colección</string>
    <string name="buscar_bar">Buscar</string>
    <string name="Chat">Chat</string>
    <string name="chats">Chats</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="send_at">Send at</string>
    <string name="message">Message</string>
    <string name="header">Header</string>
    <string name="sent_by_you">Sent by you</string>
    <string name="chat_with">Chat con</string>
    <string name="Call">Llamar</string>
    <string name="texto">Texto</string>
    <string name="description">Descripción</string>
    <string name="subir_imagen">Subir Imagen</string>
    <string name="nombre_imagen">Nombre Imagen</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="who_do_you_want_to_call">¿A quién quieres llamar?</string>
    <string name="call">Llama</string>
    <string name="llamadas">Llamadas</string>
</resources>
