<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <!-- Picture loader -->


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                style="@style/TextViewInfoForm"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumTitle"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="top"
                    style="@style/TextViewInfoForm"
                    android:hint="@string/t_tulo_del_album"
                    android:inputType="textPersonName"
                    android:text="Goodbye yellow brick road"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                style="@style/DescriptionBox"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumDescription"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:gravity="top"
                    style="@style/DescriptionBox"
                    android:hint="@string/description"
                    android:inputType="textMultiLine|textFilter"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                style="@style/TextViewInfoForm"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumArtist"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/artista_o_grupo"
                    style="@style/TextViewInfoForm"
                    android:inputType="textPersonName"
                    android:text="Elton John"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                style="@style/TextViewInfoForm"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumReleaseCountry"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    style="@style/TextViewInfoForm"
                    android:hint="@string/pais_del_album"
                    android:inputType="textPersonName"
                    android:text="UK" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                style="@style/TextViewInfoForm"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumReleaseYear"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    style="@style/TextViewInfoForm"
                    android:hint="@string/ano_de_salida"
                    android:inputType="textPersonName"
                    android:text="1973" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                style="@style/TextViewInfoForm"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/albumPrice"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:ems="10"
                    style="@style/TextViewInfoForm"
                    android:hint="@string/precio"
                    android:inputType="number"
                    android:text="700" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="100"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFilename"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:text="@string/nombre_imagen" />

                <ImageView
                    android:id="@+id/ivPrev"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="20"
                    app:srcCompat="@android:drawable/btn_dialog" />

                <Button
                    android:id="@+id/btUploadImage"
                    android:layout_weight="30"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/subir_imagen" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/postAlbum"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:text="@string/publicar" />

            <!-- Ubicacion del vendedor -->

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />

</androidx.drawerlayout.widget.DrawerLayout>